svolgimento esercizio palindromo

--- a/js-palindromi/index.html
+++ b/js-palindromi/index.html
@@ -73,6 +73,19 @@
                                 Creare una funzione per capire se la parola inserita è palindroma
                             </li>
                         </ol>
+                        <form class="my-3">
+                            <label for="valueToCheck" class="form-label">
+                                Inserisci una frase, una parola o un numero
+                            </label>
+                            <input type="text" class="form-control" id="valueToCheck"
+                                aria-describedby="valueToCheckHelp" />
+                            <div id="valueToCheckHelp" class="form-text">
+                                Inserisci una frase, una parola o un numero per controllare se è un palindromo.
+                            </div>
+                        </form>
+                        <button class="btn btn-primary" id="checkIfPalindrome">
+                            Testa se è un palindromo
+                        </button>
                     </div>
                 </div>
             </div>
