svolgimento esercizio pari e dispari

--- a/js-palindromi/index.html
+++ b/js-palindromi/index.html
@@ -68,9 +68,8 @@
                         <ol>
                             <li>
                                 Chiedere all’utente di inserire una parola
-                            </li>
-                            <li>
-                                Creare una funzione per capire se la parola inserita è palindroma
+                            </li <li>
+                            Creare una funzione per capire se la parola inserita è palindroma
                             </li>
                         </ol>
                         <form class="my-3">
@@ -78,7 +77,8 @@
                                 Inserisci una frase, una parola o un numero
                             </label>
                             <input type="text" class="form-control" id="valueToCheck"
-                                aria-describedby="valueToCheckHelp" />
+                                aria-describedby="valueToCheckHelp"
+                                placeholder="I topi non avevano nipoti / Anna / 1991" />
                             <div id="valueToCheckHelp" class="form-text">
                                 Inserisci una frase, una parola o un numero per controllare se è un palindromo.
                             </div>
