modifiche esercizio pari e dispari

--- a/js-pariedispari/index.html
+++ b/js-pariedispari/index.html
@@ -100,7 +100,7 @@
                                 Inserisci un numero da 1 a 5
                             </label>
                             <input type="number" class="form-control" id="userNumber" aria-describedby="userNumberHelp"
-                                placeholder="Inserisci qui il tuo numero" max="5" min="1" value="1" />
+                                value="1" />
                             <div id="userNumberHelp" class="form-text">
                                 Inserisci sopra il tuo numero
                             </div>
