modifiche esercizio pari e dispari

--- a/js-pariedispari/index.html
+++ b/js-pariedispari/index.html
@@ -97,7 +97,8 @@
                             </div>
 
                             <label for="userNumber" class="form-label">
-                                Inserisci un numero da 1 a 5
+                                Inserisci un numero da <span id="minNumberPlaceholder">1</span> a <span
+                                    id="maxNumberPlaceholder">5</span>
                             </label>
                             <input type="number" class="form-control" id="userNumber" aria-describedby="userNumberHelp"
                                 value="1" />
