inserimento conteggio dei punti per partite consecutive

--- a/js-pariedispari/index.html
+++ b/js-pariedispari/index.html
@@ -114,7 +114,8 @@
                                 Gioca a pari o dispari
                             </button>
                         </div>
-                        <div class="card p-3 d-none" id="showResults"></div>
+                        <div class="card p-3 d-none" id="showResults">
+                        </div>
                     </div>
                 </div>
             </div>
