--- a/js-palindromi/index.html
+++ b/js-palindromi/index.html
@@ -72,20 +72,22 @@
                             Creare una funzione per capire se la parola inserita è palindroma
                             </li>
                         </ol>
-                        <form class="my-3">
-                            <label for="valueToCheck" class="form-label">
-                                Inserisci una frase, una parola o un numero
-                            </label>
-                            <input type="text" class="form-control" id="valueToCheck"
-                                aria-describedby="valueToCheckHelp"
-                                placeholder="I topi non avevano nipoti / Anna / 1991" />
-                            <div id="valueToCheckHelp" class="form-text">
-                                Inserisci una frase, una parola o un numero per controllare se è un palindromo.
-                            </div>
-                        </form>
-                        <button class="btn btn-primary" id="checkIfPalindrome">
-                            Testa se è un palindromo
-                        </button>
+                        <div class="card p-3">
+                            <form class="mb-3">
+                                <label for="valueToCheck" class="form-label">
+                                    Inserisci una frase, una parola o un numero
+                                </label>
+                                <input type="text" class="form-control" id="valueToCheck"
+                                    aria-describedby="valueToCheckHelp"
+                                    placeholder="I topi non avevano nipoti / Anna / 1991" />
+                                <div id="valueToCheckHelp" class="form-text">
+                                    Inserisci una frase, una parola o un numero per controllare se è un palindromo.
+                                </div>
+                            </form>
+                            <button class="btn btn-primary" id="checkIfPalindrome">
+                                Testa se è un palindromo
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
